--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -256,8 +256,8 @@
               
               Made by <a href = "/book/tip" style = "color:white">Tip+_one</a><br>
               
-              <a href="http://www.ptu.ac.kr/" target="_blank"><img src="http://ptuniv.ac.kr/images_std/kor/login/img_loginLogo.gif"></a><br>
-              
+              <a href="http://www.ptu.ac.kr/" target="_blank" style="color:white">평택대학교(PYEONGTAEK UNIVERSITY)</a><br>
+              <!--<img src="http://ptuniv.ac.kr/images_std/kor/login/img_loginLogo.gif">-->
             </div>
         
         <div class="col-md-2 col-sm-1">
@@ -280,9 +280,6 @@
       <!--달력-->
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
       <script src="http://code.jquery.com/ui/1.8.18/jquery-ui.min.js"></script>
-
-<!--reservation 제이커리-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
   </body>
 </html>
