--- a/app/views/book/real_main.erb
+++ b/app/views/book/real_main.erb
@@ -78,6 +78,7 @@
                 <th>일시</th>
                 <th>상태</th>
                 <th></th><!--바로가기-->
+                <th></th>
               </tr>
             </thead>
             
@@ -89,6 +90,11 @@
                     <td><%=r.start_time%> - <%=r.finish_time%></td>
                     <td><%=r.state%></td>
                     <td><button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#show<%=r.id%>">상세정보</button></td>
+                    <td>
+                      <form action="#">
+                        <button type="button" class="btn btn-default btn-sm">예약취소</button>
+                      </form>
+                    </td>
                   </tr>
                         
                   <%end%>
@@ -100,6 +106,11 @@
                     <td><%=r.start_time%> - <%=r.finish_time%></td>
                     <td><%=r.state%></td>
                     <td><button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#show<%=r.id%>">상세정보</button></td>
+                    <td>
+                      <form action="#">
+                        <button type="button" class="btn btn-default btn-sm">예약취소</button>
+                      </form>
+                    </td>
                   </tr>
                         
                   <%end%>
@@ -121,6 +132,7 @@
                 <th>일시</th>
                 <th>상태</th>
                 <th></th><!--바로가기-->
+                <th></th>
               </tr>
             </thead>
             
@@ -132,6 +144,11 @@
                     <td><%=r.start_time%> - <%=r.finish_time%></td>
                     <td><%=r.state%></td>
                     <td><button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#show<%=r.id%>">상세정보</button></td>
+                    <td>
+                      <form action="#">
+                        <button type="button" class="btn btn-default btn-sm">예약취소</button>
+                      </form>
+                    </td>
                   </tr>
                         
                   <%end%>
@@ -143,6 +160,11 @@
                     <td><%=r.start_time%> - <%=r.finish_time%></td>
                     <td><%=r.state%></td>
                     <td><button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#show<%=r.id%>">상세정보</button></td>
+                    <td>
+                      <form action="#">
+                        <button type="button" class="btn btn-default btn-sm">예약취소</button>
+                      </form>
+                    </td>
                   </tr>
                         
                   <%end%>
