--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
 			       MY ZONE
 			     </div>
 			     </a>
-			     <div class="col-md-5 col-xs-5">
+			     <div class="col-md-4 col-xs-5">
 			      <!--<div class="col-md-5 col-xs-5">-->
 			        <div class="navbar-collapse collapse">
   			       <!--<ul class="nav navbar-nav skrollable skrollable-between" data-0="margin-top:20px;" data-300="margin-top:5px;" style="margin-top: 25px; font-size:17px">-->
@@ -73,7 +73,7 @@
 			     
 			     
 			          
-			     <div class="col-md-5 col-xs-5">
+			     <div class="col-md-6 col-xs-5">
 			     <!--<div class="col-md-5 col-xs-5">-->
 			       
 			       <div class="navbar-collapse collapse">
@@ -89,10 +89,15 @@
                       <li style="color:white">
                         <a href="" style="color:white"><i class="glyphicon glyphicon-heart-empty" style="color:white;"></i><%= current_user.student_name %>님 반갑습니다</a>
                       </li>
+                      <li style="color:white">
+                        <a href="/users/sign_out"style="color:#D5D5D5">로그아웃</a>
+                      </li>
               
                     </ul>
-                    &nbsp;
-                    <a href="/users/sign_out"><button type="button" class="btn btn-default btn-circle btn-lg" style="margin-top:40px"><i class="glyphicon glyphicon-log-out"></i></button></a>
+                    <!--&nbsp;-->
+                    <!--<a href="/users/sign_out"><button type="button" class="btn btn-default btn-circle btn-lg" style="margin-top:40px"><i class="glyphicon glyphicon-log-out"></i></button>-->
+                    <!--<img src="http://khu-p-chohyejin.c9.io/img/logout.jpg" alt="로그아웃 버튼입니다." width="15%" height="20%">-->
+                    <!--</a>-->
 
               </div><!--/.navbar-collapse -->
 			     </div>
@@ -152,7 +157,7 @@
                 
                     
   <!--                    <li>-->
-  <!--                      <p id="11" href="#" class="page-scroll" style="margin-top: 30px; font-size: 15px;color: #333131;"><%= current_user.student_name %> 님 반갑습니다.</p>-->
+  <!--                      <p id="11" href="#" class="page-scroll" style="margin-top: 30px; font-size: 15px;color: #333131;"><%#= current_user.student_name %> 님 반갑습니다.</p>-->
   <!--                    </li>-->
                       
   <!--                    <li>-->
@@ -251,13 +256,13 @@
               <!--</div>-->
             </div><!--div class="col-md-6"-->
             
-            <div class="col-md-6 col-sm-6" align="left" style="color:white;padding-top:50px">
+            <div class="col-md-6 col-sm-6" align="left" style="color:white;padding-top:50px;font-size:17px;">
               Copyright © Company Tip+_one 2015, All Rights Reserved.<br>
               
               Made by <a href = "/book/tip" style = "color:white">Tip+_one</a><br>
               
-              <a href="http://www.ptu.ac.kr/" target="_blank" style="color:white">평택대학교(PYEONGTAEK UNIVERSITY)</a><br>
-              <!--<img src="http://ptuniv.ac.kr/images_std/kor/login/img_loginLogo.gif">-->
+              <a href="http://www.ptu.ac.kr/" target="_blank" style="color:white; font-size: 20px;">평택대학교(PYEONGTAEK UNIVERSITY)</a><br>
+              
             </div>
         
         <div class="col-md-2 col-sm-1">
